more fix for find bugs warning